--- a/angular.json
+++ b/angular.json
@@ -24,24 +24,24 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/assets/css/font-awesome.css",
-              "node_modules/assets/css/bootstrap.css",
-              "node_modules/assets/css/slick.css",
-              "node_modules/assets/css/bootstrap-datepicker.css",
-              "node_modules/assets/css/magnific-popup.css",
-              "node_modules/assets/css/jquery.fancybox.css",
-              "node_modules/assets/css/theme-color/default-theme.css",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/slick-carousel/slick/slick.css",
+              "node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.css",
+              "node_modules/magnific-popup/dist/magnific-popup.css",
+              "node_modules/fancybox/dist/css/jquery.fancybox.css",
+              "src/assets/css/theme-color/default-theme.css",
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/assets/js/jquery.min.js",
-              "node_modules/assets/js/bootstrap.js",
-              "node_modules/assets/js/slick.js",
-              "node_modules/assets/js/simple-animated-counter.js",
-              "node_modules/assets/js/jquery.magnific-popup.min.js",
-              "node_modules/assets/js/bootstrap-datepicker.js",
-              "node_modules/assets/js/app.js",
-              "node_modules/assets/js/custom.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/slick-carousel/slick/slick.js",
+              "src/assets/js/simple-animated-counter.js",
+              "node_modules/magnific-popup/dist/jquery.magnific-popup.min.js",
+              "node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.js",
+              "src/assets/js/app.js",
+              "src/assets/js/custom.js"
             ]
           },
           "configurations": {
