--- a/package.json
+++ b/package.json
@@ -19,21 +19,26 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
+    "bootstrap": "^3.3.6",
+    "bootstrap-datepicker": "^1.7.0",
+    "fancybox": "^2.1.5",
+    "font-awesome": "^4.5.0",
+    "jquery": "^1.11.3",
+    "magnific-popup": "^1.1.0",
     "rxjs": "~6.4.0",
+    "slick-carousel": "^1.5.9",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.22",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.3.22",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/bootstrap": "^4.3.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.33",
+    "@types/jquery": "^1.11.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
